<resources>
    <string name="app_name">KtitsApp</string>
    <string name="text">Международный центр компетенций\nКазанский техникум информационных\nтехнологий и связи
    </string>
    <string name="text_two">г. Казань, ул. Галеева, д. 3-а\nТел.: (843) 272-13-61</string>
    <string name="text_th">Понедельник - Пятница\n1 пара: 08:00 - 09:30\n2 пара: 09:40 - 11:10\n3 пара: 11:50 - 13:20\n4 пара: 13:40 - 15:10\n5 пара: 15:20 - 16:50\n6 пара: 17:00 - 18:30\n7 пара: 18:40 - 20:10</string>
    <string name="text_four">Суббота\n1 пара: 08:00 - 09:30\n2 пара: 09:40 - 11:10\n3 пара: 11:30 - 13:00\n4 пара: 13:10 - 14:40\n5 пара: 14:50 - 16:20\n6 пара: 16:30 - 18:00
</string>
    <string name="ktits"><![CDATA[Международный центр компетенций - Казанский техникум информационных технологий и связи один из крупнейших средних профессиональных учебных заведений в Республике Татарстан. Организован он был 31 августа 1932 года постановлением СНК СССР от 31 августа 1932 года № 1332 «Об укреплении и подготовки кадров органов связи» на базе учебно - производственного комбината связи. С тех пор в стенах техникума получили образование более 35 тысяч человек, которых можно встретить во всех уголках страны. Около 80% специалистов среднего звена, работающих на Казанских предприятиях связи - выпускники техникума. Для первого приема студентов в техникум 1 марта 1932 года на базе существовавшего учебно-производственного комбината связи были открыты курсы, а с 1 октября того же года на базе этих курсов был открыт Казанский электротехникум связи. К занятиям по дневной и вечерней формам обучения приступило 217 студентов в составе пяти учебных групп, обучавшихся по трем специальностям: радиовещательные устройства, городские телефонные станции, телеграфия. В здании Управления связи Татарской АССР техникуму было выделено несколько комнат. Здесь студенты учились и жили, там же проживали и некоторые преподаватели. Первым директором Казанского техникума связи была назначена Б.Г. Сабитова, а преподавательский состав составлял 18 человек. Зоной приема студентов и распределения его выпускников на первом этапе было определено шесть республик РСФСР: Татарская АССР, Башкирская АССР, Марийская АССР, Мордовская АССР, Удмуртская АССР, Чувашская АССР. Благодаря настойчивой и целеустремленной работе педагогического коллектива к моменту первого выпуска, состоявшегося 1 июля 1935 года, в техникуме были созданы две учебно-производственные мастерские, шесть лабораторий, четыре учебные аудитории, были оборудованы библиотека, красный уголок и другие помещения. Также улучшились и условия проживания студентов — на ул. Подлужная и на ул. Правобулачная были заселены общежития на сто человек. В августе 1940 года, во исполнение Приказа наркома связи Союза СССР № 604 от 23 августа 1940 г., техникум был переименован в «Казанский электротехникум связи». В годы Великой Отечественной войны КЭТС продолжал готовить столь нужных для страны специалистов связи — радистов, телефонистов, телеграфистов. Многие выпускники техникума ушли на фронт и сражались в рядах армейских подразделений связи. Преподаватели техникума Колотов В.В., Шаймуллин Т.Ш., Лебедев М.П., Баширов Н.Ф., Фельдман Л.С., Клочков И.А., Разумов М.Ф., Вяткин М.Ф. также сражались на полях войны и внесли свой вклад в дело разгрома окупантов. Многие из участников не вернулись с полей сражений. Оставшиеся в тылу преподаватели и учащиеся техникума оказывали всяческую помощь фронту, приближая своим тяжелым трудом долгожданный день Победы над врагом. По мобилизации они работали на оборонных заводах, собирали металлолом и драгоценные металлы, ухаживали за ранеными в госпиталях, работали в подсобных хозяйствах, на выгрузке дров, угля и на других тяжелых работах. В послевоенные годы быстрое развитие средств связи, радиовещания и телевидения, совершенствование и усложнение используемого в этих областях оборудования потребовали увеличения количества технических специалистов и повышения качества их подготовки. В связи с этим в техникуме связи был увеличен прием абитуриентов на имеющиеся специальности и были введены новые циклы по специальностям: «Районная электрическая связь и радиофикация», «Телевизионная техника и радиорелейная связь». Начиная с 50-х годов прием студентов и распределение выпускников ГАПОУ <<МЦК-КТИТС>> проводилось по всей территории Советского Союза. В 1955 году в техникуме была введена заочная форма обучения. Преподавательский коллектив техникума связи внес большой вклад в повышение квалификации инженерно-технических работников предприятий связи нашей страны. С 1950 года в течение десяти лет в ГАПОУ <<МЦК-КТИТС>> работали межобластные курсы по переподготовке начальников контор связи и их заместителей, на которых учились слушатели из автономных республик Поволжья, а также из Кемеровской, Новосибирской, Омской, Томской, Свердловской, Кировской, Пермской и других областей СССР. В 1964 году в техникуме связи открылись Всесоюзные курсы по повышению квалификации инженерно-технических работников и Республиканские курсы начальников отделений связи и экономистов, которые ежегодно заканчивало по 200-250 человек. На сегодняшний день техникум обеспечен соответствующими педагогическими кадрами, которые имеют необходимую квалификацию и опыт. Всего в техникуме ведут преподавательскую деятельность более 100 чел. Из них высшую категорию имеют - 37 чел., 36 чел. имеют различные почетные звания, два человека имеют ученые степени кандидата наук, три человека являются соискателями ученой степени кандидата наук. Техникум ведет подготовку молодого пополнения преподавателей, направляя лучших выпускников в высшие учебные заведения. Внеучебная работа педагогического коллектива техникума направлена на подготовку высококвалифицированных специалистов, закрепление у студентов профессиональных навыков и умений, воспитание в них высоких нравственных и гражданских качеств. Сегодня ГАПОУ <<МЦК-КТИТС>> — одно из ведущих учебных заведений связи в Поволжском регионе, располагающее современной учебно-материальной базой и имеющее высокий научно-производственный потенциал. В настоящее время в техникуме учится более 2000 человек, из них на дневном отделении — свыше 1300 человек. Выпускники техникума — это специалисты высокого класса, практически ни в чем не уступающие своим коллегам с вузовскими дипломами — ведь не секрет, что прикладной характер учебного процесса ГАПОУ <<МЦК-КТИТС>> дает качественное и фундаментальное образование в области связи. И это признают все связисты, работающих в нашей отрасли. Образование, полученное в стенах техникума, обеспечивает высокий профессионализм, дисциплинированность, ответственное отношение к порученному делу и другие ценные деловые качества. Наш техникум обладает развитой инфраструктурой: в распоряжении студентов учебные и лабораторные корпуса общей площадью более 10 тыс. кв. м., на которых расположены 38 лабораторий, 24 кабинета, 6 мастерских и 10 компьютерных классов. Всё это позволяет качественно и на современном уровне требований вести теоретическую и практическую подготовку будущих связистов. Благодаря финансовой поддержке Министерство цифрового развития государственного управления, информационных технологий и связи Республики Татарстан и Правительства Республики Татарстан, а также базовых предприятий, техникум сегодня оснащен современным лабораторным, компьютерным, ремонтным и иным оборудованием. В техникуме связи созданы все условия для всестороннего развития и дополнительного обучения студентов. В оборудованных по-современному спортивных залах студенты могут совершенствовать свою физическую подготовку. К их услугам основной, теннисный и тренажерный залы. Работают различные спортивные секции. Библиотека с книжным фондом более чем в 140 тысяч томов и читальный зал на 100 посадочных мест обеспечивают учебно-воспитательный процесс необходимой технической, научной и художественной литературой. Одна из форм практического обучения молодежи — участие в конструкторской и экспериментальной работе в технических кружках по каждому направлению подготовки, где студенты могут найти себе дело по интересу. В техникуме также продолжают работать кружки художественной самодеятельности. За время обучения в техникуме студенты могут получить дополнительные специальности по профессии, что расширяет их возможности быть трудоустроенными после окончания ГАПОУ <<МЦК-КТИТС>>. Распоряжением Правительства Российской Федерации от 30.12.2004г. № 1732-Р ГАПОУ <<МЦК-КТИТС>> находится в ведении Федерального агентства связи Министерство цифрового развития государственного управления, информационных технологий и связи Республики Татарстан. В соответствии с постановлением Кабинета Министров Республики Татарстан от 27.01.2012 г. №51 Учреждение принято в собственность Республики Татарстан, а также определено, что Министерство цифрового развития государственного управления, информационных технологий и связи Республики Татарстан осуществляет функции и полномочия учредителя Учреждения.]]></string>
    <string name="_420_2019_420_3_1_2019_1739_69_2300_0">Техникум имеет обновленное (капитальный ремонт) общежитие на 420 койко-мест. В общежитии созданы благоприятные условия проживания: удобные кухни, умывальные комнаты, комнаты со стиральными машинами для индивидуальной стирки. Имеются комнаты отдыха, душевые, актовый зал, спортивная комната, компьютерный класс. За порядком в общежитии следят воспитатели, дежурные по этажу. Воспитатели также следят за успеваемостью и посещаемостью студентов, совместно со студенческим советом организуют мероприятия воспитательного характера. Студенты живут весело и дружно, установленный порядок стараются не нарушать. По итогам городского смотра конкурса общежитий техникумов и колледжей Казани, общежитие МЦК-КТИТС ежегодно занимает призовые места. \n \n Всем иногородним абитуриентам, поступающим в 2019 году в ГАПОУ «МЦК-КТИТС» предоставляется общежитие. \n \nОбщежитие на 420 мест \n 3-х местные комнаты \nСтоимость с 1 сентября 2019 года: \nДля студентов, обучающихся за счет бюджетных ассигнований - 1739,69 руб.\n Для студентов, обучающихся с полным возмещением затрат - 2300,0 руб. \n \nКаждая комната оборудована: \n- Холодильником; \n- ТВ; \n- Высокоскоростным интернетом; \n- Современной системой безопасности. \n \nДушевые, постирочные на каждом этаже.</string>
    <string name="money">Приказ о зачислении поступающих в МЦК-КТИТС на обучение по образовательным программам за счет бюджетных ассигнований Республики Татарстан</string>
    <string name="stray">Приказ о зачислении поступающих в МЦК-КТИТС на обучение по образовательным программам по договору об оказании платных образовательных услуг</string>
</resources>
