<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_white"
    android:orientation="vertical"
    tools:context=".PricazActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="36dp"
            android:text="ГЛАВНАЯ"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:src="@drawable/ic_ktits" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="36dp"
            android:text="МЦК КТИТС"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:lines="4"
            android:layout_marginTop="24dp"
            android:text="@string/money"
            android:textColor="#101010"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/money_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Посмотреть приказ"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:lines="4"
            android:layout_marginTop="64dp"
            android:text="@string/stray"
            android:textColor="#101010"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/stray_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Посмотреть приказ"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:text="@string/text"
                android:textColor="@color/blue"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_two"
                android:textColor="@color/blue"
                android:textSize="14sp" />

        </LinearLayout>

    </FrameLayout>
</LinearLayout>